@@ -2,7 +2,11 @@ require 'familia'
 require 'familia/test_helpers'
 
 
-@a = Bone.new 'atoken', 'akey'
+@a = Bone.new 'atoken2', 'akey'
+
+## Bone#rediskey
+@a.rediskey
+#=> 'bone:atoken2:akey:object'
 
 ## Familia::String#value should give default value
 @a.value.value
